# un-extractor

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE.txt  MANIFEST.in  PLAN.md  Pipfile  README.md  TODO.md  alembic.ini  extractor.sh  import_json_to_db.py  process_dataset.py  pyproject.toml  re_scan.py  requirements.txt  setup.cfg  setup.py  un_extractor.py
.claude/: settings.json
alembic/: env.py
scripts/: compute_alignment_series.py  compute_country_network.py  compute_ideal_points.py  compute_ideal_points_mcmc.py  compute_speech_topics.py  compute_vote_predictions.py  compute_voting_blocs.py  coverage_report.py  extract_speech_cosponsors.py  extract_speech_resolution_mentions.py  fix_country_duplicates.py  generate_unbis_mapping.py  import_crUnsc_citations.py  import_crUnsc_pdfs.py  import_crUnsc_texts.py  import_ga_resolution_texts.py  import_gdebate_corpus.py  import_harvard_ga_votes.py  import_sc_debates.py  import_sc_vetoes.py  import_unbench_sc_drafts.py  import_undl_ga_resolutions.py  import_undl_general_debate.py  import_undl_member_states.py  import_undl_representatives.py  import_undl_votes.py  import_voeten_ideal_points.py  import_voeten_resolution_meta.py  migrate_add_speaker_organization.sql  notify_update.py  tag_speech_types.py
src/: models.py
tests/: test_clean_text.py  test_compute_vote_predictions.py  test_detect_sections.py  test_extract_speech_resolution_mentions.py  test_extract_text.py  test_extractor.py  test_fix_country_duplicates.py  test_import_json_to_db.py  test_integration.py  (+11 more)
(+46 files in other folders)
